hphp/hack/test/typecheck/shape_access_with_non_existent_field.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

function test(shape() $s): void {
  $s['f'] ?? null;
}
